# commands

./: .gitignore  README.md  main.py  pyproject.toml
src/commands/: __init__.py
src/commands/_template/: command.py
src/commands/celery/: command.py
src/commands/docker/: __init__.py  command.py  expression.py  models.py
src/commands/ffmpeg/: README.md  command.py
src/commands/find/: command.py  man.txt
src/commands/pm2/: __init__.py  command.py  models.py
src/commands/r/: README.md  command.py
src/commands/uv/: command.py
src/commands/uvicorn/: command.py
test/: test_all.py
