[project]
name = "commands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joan Gonzalez", email = "jgquiroga@dc.uba.ar" }
]
requires-python = ">=3.13"
dependencies = [
    "argbuilder",
    "pydantic>=2.12.5",
]

[project.scripts]
commands = "commands:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
argbuilder = { git = "https://github.com/joangq/argbuilder" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
